@@ -49,7 +49,6 @@ module RDoc::Parser::RubyTools
           obj.pop_token
         end if @token_listeners
       else
-        warn("':' not followed by identifier or operator")
         tk = tk1
       end
     end
